--- a/GestionCitas/MicroServicioPersonas.Tests/packages.config
+++ b/GestionCitas/MicroServicioPersonas.Tests/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.AspNet.WebApi" version="5.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.3.0" targetFramework="net48" />
   <package id="Moq" version="4.20.72" targetFramework="net48" />
   <package id="MSTest.TestAdapter" version="2.2.10" targetFramework="net48" />
   <package id="MSTest.TestFramework" version="2.2.10" targetFramework="net48" />
