--- a/GestionCitas/MicroServicioCitas/MicroServicioCitas.csproj
+++ b/GestionCitas/MicroServicioCitas/MicroServicioCitas.csproj
@@ -45,6 +45,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=10.0.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.10.1.1\lib\net461\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>packages\EntityFramework.6.5.1\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -133,15 +136,19 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application\DTOs\CitaDTO.cs" />
+    <Compile Include="Application\DTOs\CreateCitaDTO.cs" />
+    <Compile Include="Application\DTOs\UpdateCitaDTO.cs" />
     <Compile Include="Application\Interfaces\ICitaService.cs" />
     <Compile Include="Application\Interfaces\IRabbitMqService.cs" />
+    <Compile Include="Application\Mapping\AutoMapperProfiles\CitaProfile.cs" />
     <Compile Include="Application\Services\CitaService.cs" />
     <Compile Include="Application\Services\RabbitMqSender.cs" />
     <Compile Include="Application\Services\RabbitMqService.cs" />
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Domain\Enums\TipoDePersona.cs" />
+    <Compile Include="Domain\Enums\EstadoCita.cs" />
     <Compile Include="Domain\Exceptions\Exceptions.cs" />
     <Compile Include="Domain\Interfaces\ICitaRepository.cs" />
     <Compile Include="Domain\Models\Cita.cs" />
@@ -166,11 +173,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Application\DTOs\" />
-    <Folder Include="Application\Mapping\AutoMapperProfiles\" />
     <Folder Include="App_Data\" />
     <Folder Include="Infrastructure\SqlQuery\" />
     <Folder Include="Presentation\Extensions\" />
+    <Folder Include="Tests\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
