--- a/GestionCitas/MicroServicioRecetas/MicroServicioRecetas.csproj
+++ b/GestionCitas/MicroServicioRecetas/MicroServicioRecetas.csproj
@@ -174,6 +174,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Infrastructure\SqlQuery\" />
     <Folder Include="Presentation\Extensions\" />
+    <Folder Include="Tests\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
