--- a/GestionCitas/MicroServicioRecetas/MicroServicioRecetas.csproj
+++ b/GestionCitas/MicroServicioRecetas/MicroServicioRecetas.csproj
@@ -136,6 +136,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application\Consumer\RecetaConsumer.cs" />
     <Compile Include="Application\DTOs\BaseRecetaDTO.cs" />
     <Compile Include="Application\DTOs\CreateRecetaDTO.cs" />
     <Compile Include="Application\DTOs\RecetaDTO.cs" />
@@ -154,6 +155,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\Configurations\RabbitMqConfig.cs" />
     <Compile Include="Infrastructure\Data\RecetasContext.cs" />
     <Compile Include="Infrastructure\Repositories\RecetaRepository.cs" />
     <Compile Include="Presentation\Controllers\RecetaController.cs" />
