--- a/GestionCitas/MicroServicioCitas/MicroServicioCitas.csproj
+++ b/GestionCitas/MicroServicioCitas/MicroServicioCitas.csproj
@@ -205,6 +205,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Domain\Enums\EstadoCita.cs" />
     <Compile Include="Domain\Exceptions\Exceptions.cs" />
+    <Compile Include="Domain\Interfaces\ICitaDomainService.cs" />
     <Compile Include="Domain\Interfaces\ICitaRepository.cs" />
     <Compile Include="Domain\Models\Cita.cs" />
     <Compile Include="Domain\Services\CitaDomainService.cs" />
