--- a/GestionCitas/MicroServicioRecetas.Tests/MicroServicioRecetas.Tests.csproj
+++ b/GestionCitas/MicroServicioRecetas.Tests/MicroServicioRecetas.Tests.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{25FE9609-27CA-43EF-959C-67B30F8F608E}</ProjectGuid>
+    <ProjectGuid>{BE04D0EB-4647-41A0-8D58-DCE999C3F77B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MicroServicioCitas.Tests</RootNamespace>
-    <AssemblyName>MicroServicioCitas.Tests</AssemblyName>
+    <RootNamespace>MicroServicioRecetas.Tests</RootNamespace>
+    <AssemblyName>MicroServicioRecetas.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -65,10 +65,6 @@
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
-    <Reference Include="System.ComponentModel.Annotations, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ComponentModel.Annotations.5.0.0\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
-    </Reference>
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -96,21 +92,25 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Application\Services\CitaServiceTests.cs" />
-    <Compile Include="Domain\Models\CitaTests.cs" />
-    <Compile Include="Presentation\Controller\CitasControllerTests.cs" />
+    <Compile Include="Presentation\Controller\RecetaControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\MicroServicioCitas\MicroServicioCitas.csproj">
-      <Project>{e7263b8f-baff-4fc3-a05d-bbd0cafb9a2d}</Project>
-      <Name>MicroServicioCitas</Name>
+    <ProjectReference Include="..\MicroServicioRecetas\MicroServicioRecetas.csproj">
+      <Project>{9c42a37a-1a38-4fd4-91c3-e834ac696168}</Project>
+      <Name>MicroServicioRecetas</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Application\DTOs\" />
+    <Folder Include="Application\Mapping\" />
+    <Folder Include="Application\Services\" />
+    <Folder Include="Domain\Models\" />
+    <Folder Include="Domain\Services\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
