--- a/GestionCitas/MicroServicioRecetas.Tests/MicroServicioRecetas.Tests.csproj
+++ b/GestionCitas/MicroServicioRecetas.Tests/MicroServicioRecetas.Tests.csproj
@@ -111,6 +111,7 @@
     <Folder Include="Application\Services\" />
     <Folder Include="Domain\Models\" />
     <Folder Include="Domain\Services\" />
+    <Folder Include="Infrastructure\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
