--- a/GestionCitas/MicroServicioRecetas/MicroServicioRecetas.csproj
+++ b/GestionCitas/MicroServicioRecetas/MicroServicioRecetas.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Domain\Enums\EstadoReceta.cs" />
     <Compile Include="Domain\Enums\MessageType.cs" />
     <Compile Include="Domain\Exceptions\Exceptions.cs" />
+    <Compile Include="Domain\Interfaces\IRecetaDomainService.cs" />
     <Compile Include="Domain\Interfaces\IRecetaRepository.cs" />
     <Compile Include="Domain\Models\Receta.cs" />
     <Compile Include="Domain\Services\RecetaDomainService.cs" />
